--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -3,33 +3,46 @@ name: Python Lint
 on: [push, pull_request]
 
 jobs:
-  lint:
-
+  flake8:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: [3.8, 3.9]
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
+      - uses: actions/checkout@v2
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8 black
-        if [[ -f requirements.txt ]]; then pip install -r requirements.txt; fi
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
 
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. Set line length to 80 chars max.
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=80 --statistics
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install flake8
+          if [[ -f requirements.txt ]]; then pip install -r requirements.txt; fi
 
-    - name: Black
-      run: |
-        black --check --line-length=80 .
+      - name: Lint with flake8
+        run: |
+          # stop the build if there are Python syntax errors or undefined names
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          # exit-zero treats all errors as warnings. Set line length to 80 chars max.
+          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=80 --statistics
+
+  black:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install black
+
+      - name: Black
+        run: |
+          black --check --line-length=80 .
