--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -30,6 +30,32 @@ jobs:
           # exit-zero treats all errors as warnings. Set line length to 80 chars max.
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=80 --statistics
 
+  requirements:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install poetry
+
+      - name: Create poetry env
+        run: |
+          poetry install
+
+      - name: Check requirements
+        run: |
+          poetry export -f requirements.txt -o requirements-ci.txt --without-hashes
+          poetry export -f requirements.txt --dev -o requirements-ci-dev.txt --without-hashes
+          diff ./requirements.txt ./requirements-ci.txt
+          diff ./requirements-dev.txt ./requirements-ci-dev.txt
+
   black:
     runs-on: ubuntu-latest
     steps:
