--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -81,3 +81,28 @@ jobs:
       - name: Black
         run: |
           black --check --line-length=80 .
+
+  readme:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install poetry
+
+      - name: Create poetry env
+        run: |
+          poetry install
+
+      - name: Check if README is up to date (pkp --help)
+        run: |
+          cp README.md README.md.orig
+          ./dev-update.sh README
+          diff ./README.md ./README.md.orig
