--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -62,13 +62,31 @@ jobs:
           v_py=$(poetry run python -c "import pkp; print(pkp.__version__)")
           if [[ "$v_pyproject" != "$v_py" ]]; then echo "Version mismatch detected" >&2; exit 1; fi
 
+  isort:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install isort
+
+      - name: isort
+        run: |
+          isort --check --diff --verbose .
 
   black:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
