--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ colorama = "^0.4.4"
 [tool.poetry.dev-dependencies]
 pyinstaller = "^4.0"
 staticx = "^0.12.0"
+isort = "^5.6.4"
 
 [build-system]
 requires = ["poetry>=0.12"]
