--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,3 +18,6 @@ isort = "^5.6.4"
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+
+[tool.black]
+line-length = 80
