--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,10 @@ version = "0.6.1"
 description = "Straightforward CLI for KeePass - powered by pykeepass"
 authors = ["Philipp Schmitt <philipp@schmitt.co>"]
 license = "GPL-3.0-only"
+readme = "README.md"
+
+[tool.poetry.scripts]
+pkp = "pkp:cli_main"
 
 [tool.poetry.dependencies]
 python = "^3.8"
