--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 pkp = "pkp:cli_main"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">= 3.8, < 4.0"
 pykeepass = "^3.2.1"
 colorama = "^0.4.4"
 
