--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,7 +28,7 @@ jobs:
           # stop the build if there are Python syntax errors or undefined names
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. Set line length to 80 chars max.
-          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=80 --statistics
+          flake8 . --count --max-complexity=10 --max-line-length=80 --statistics
 
   poetry:
     runs-on: ubuntu-latest
@@ -48,13 +48,6 @@ jobs:
       - name: Create poetry env
         run: |
           poetry install
-
-      - name: Check requirements
-        run: |
-          poetry export -f requirements.txt --without-hashes -o requirements-ci.txt
-          poetry export -f requirements.txt --without-hashes --dev -o requirements-ci-dev.txt
-          diff ./requirements.txt ./requirements-ci.txt
-          diff ./requirements-dev.txt ./requirements-ci-dev.txt
 
       - name: Check compare version in pyproject.toml and pkp.__version__
         run: |
