--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "pkp"
 version = "0.6.3"
 description = "Straightforward CLI for KeePass - powered by pykeepass"
 authors = ["Philipp Schmitt <philipp@schmitt.co>"]
+repository = "https://github.com/pschmitt/pkp"
 license = "GPL-3.0-only"
 readme = "README.md"
 
