Disable ARM builds
- https://github.com/healthchecks/healthchecks/issues/565
- https://github.com/pyinstaller/pyinstaller/issues/5943

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -16,7 +16,7 @@ jobs:
         arch:
           - amd64
           - 386
-          - arm
+          # - arm
           - arm64
           # - ppc64le
           # - s390x
@@ -84,7 +84,7 @@ jobs:
         arch:
           - amd64
           - 386
-          - arm
+          # - arm
           - arm64
           # - ppc64le
           # - s390x
