--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -128,24 +128,27 @@ jobs:
       #   env:
       #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  pypi_release:
+  pypi-publish:
+    name: Upload release to PyPI
     runs-on: ubuntu-latest
+    environment:
+      name: pypi
+      url: https://pypi.org/p/pkp
+    permissions:
+      id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
 
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v5
       with:
-        python-version: '3.9'
+        python-version: '3.x'
 
-    - name: Install dependencies
+    - name: python build
       run: |
-        python -m pip install --upgrade pip
-        pip install poetry
+        python3 -m pip install --upgrade pip
+        python3 -m pip install --upgrade build
+        python -m build
 
-    - name: Build and publish
-      env:
-        PYPI_USERNAME: ${{ secrets.PYPI_USERNAME }}
-        PYPI_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
-      run: |
-        poetry publish --username "$PYPI_USERNAME" --password "$PYPI_PASSWORD" --build
+    - name: Publish package distributions to PyPI
+      uses: pypa/gh-action-pypi-publish@release/v1
