Update upload-release-asset to v4

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -99,20 +99,18 @@ jobs:
         run: echo ::set-output name=VERSION::${GITHUB_REF#refs/tags/}
 
       - name: Upload Release Asset (${{ matrix.arch }})
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: actions/upload-release-asset@v4
         with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           upload_url: ${{ needs.release.outputs.upload_url }}
           asset_path: ./pkp-${{ matrix.arch }}/pkp-${{ matrix.arch }}
           asset_name: pkp-${{ steps.get_version.outputs.VERSION }}-${{ matrix.arch }}
           asset_content_type: application/octet-stream
 
       - name: Upload Release Asset (${{ matrix.arch }}-static)
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: actions/upload-release-asset@v4
         with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           upload_url: ${{ needs.release.outputs.upload_url }}
           asset_path: ./pkp-${{ matrix.arch }}-static/pkp-${{ matrix.arch }}-static
           asset_name: pkp-${{ steps.get_version.outputs.VERSION }}-${{ matrix.arch }}-static
