--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -58,73 +58,75 @@ jobs:
 
   release:
     name: Create release
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     needs: build
     outputs:
       upload_url: ${{ steps.create_release.outputs.upload_url }}
     steps:
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: ./bins
+
       - name: Create Release
         id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: false
-          prerelease: false
+          files: ./bins/*
 
-  release_attach_binaries:
-    name: Add binaries to release
-    runs-on: ubuntu-latest
-    needs: release
-    strategy:
-      fail-fast: false
-      matrix:
-        arch:
-          - amd64
-          - 386
-          # - arm
-          - arm64
-          # - ppc64le
-          # - s390x
-    steps:
-      - name: Download binary artifacts
-        uses: actions/download-artifact@v4.1.8
-        with:
-          path: ./
-
-      - name: Get the version
-        id: get_version
-        run: echo ::set-output name=VERSION::${GITHUB_REF#refs/tags/}
-
-      - name: Upload Release Asset (${{ matrix.arch }})
-        uses: actions/upload-release-asset@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          upload_url: ${{ needs.release.outputs.upload_url }}
-          asset_path: ./pkp-${{ matrix.arch }}/pkp-${{ matrix.arch }}
-          asset_name: pkp-${{ steps.get_version.outputs.VERSION }}-${{ matrix.arch }}
-          asset_content_type: application/octet-stream
-
-      - name: Upload Release Asset (${{ matrix.arch }}-static)
-        uses: actions/upload-release-asset@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          upload_url: ${{ needs.release.outputs.upload_url }}
-          asset_path: ./pkp-${{ matrix.arch }}-static/pkp-${{ matrix.arch }}-static
-          asset_name: pkp-${{ steps.get_version.outputs.VERSION }}-${{ matrix.arch }}-static
-          asset_content_type: application/octet-stream
-
-      # - name: Delete release if anything goes wrong.
-      #   if: ${{ failure() }}
-      #   uses: author/action-rollback@master
-      #   with:
-      #     release_id: ${{ steps.create_release.id }}
-      #     tag: ${{ github.ref }}
-      #     always_delete_tag: true
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  # release_attach_binaries:
+  #   name: Add binaries to release
+  #   runs-on: ubuntu-latest
+  #   needs: release
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       arch:
+  #         - amd64
+  #         # - 386
+  #         # - arm
+  #         - arm64
+  #         # - ppc64le
+  #         # - s390x
+  #   steps:
+  #     - name: Download binary artifacts
+  #       uses: actions/download-artifact@v4.1.8
+  #       with:
+  #         path: ./
+  #
+  #     - name: Get the version
+  #       id: get_version
+  #       run: echo ::set-output name=VERSION::${GITHUB_REF#refs/tags/}
+  #
+  #     - name: Upload Release Asset (${{ matrix.arch }})
+  #       uses: actions/upload-release-asset@v4
+  #       with:
+  #         github_token: ${{ secrets.GITHUB_TOKEN }}
+  #         # upload_url: ${{ needs.release.outputs.upload_url }}
+  #         asset_path: ./pkp-${{ matrix.arch }}/pkp-${{ matrix.arch }}
+  #         asset_name: pkp-${{ steps.get_version.outputs.VERSION }}-${{ matrix.arch }}
+  #         asset_content_type: application/octet-stream
+  #
+  #     - name: Upload Release Asset (${{ matrix.arch }}-static)
+  #       uses: actions/upload-release-asset@v4
+  #       with:
+  #         github_token: ${{ secrets.GITHUB_TOKEN }}
+  #         # upload_url: ${{ needs.release.outputs.upload_url }}
+  #         asset_path: ./pkp-${{ matrix.arch }}-static/pkp-${{ matrix.arch }}-static
+  #         asset_name: pkp-${{ steps.get_version.outputs.VERSION }}-${{ matrix.arch }}-static
+  #         asset_content_type: application/octet-stream
+  #
+  #     # - name: Delete release if anything goes wrong.
+  #     #   if: ${{ failure() }}
+  #     #   uses: author/action-rollback@master
+  #     #   with:
+  #     #     release_id: ${{ steps.create_release.id }}
+  #     #     tag: ${{ github.ref }}
+  #     #     always_delete_tag: true
+  #     #   env:
+  #     #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   pypi-publish:
     name: Upload release to PyPI
